--- a/Companies_scrapping.ipynb
+++ b/Companies_scrapping.ipynb
@@ -22,7 +22,6 @@
     }
    ],
    "source": [
-    "import requests\n",
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
@@ -88,7 +87,119 @@
    "id": "772576c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "token = getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d710ed7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4 SQUAREAPi to retrieve Jsons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29a71b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def places (venue, lat, lon):\n",
+    "    url = f\"https://api.foursquare.com/v3/places/search?query={venue}&ll={lat}%2C{lon}&limit=50\"\n",
+    "    headers = {\n",
+    "        \"accept\": \"application/json\",\n",
+    "        \"Authorization\": token\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.get(url, headers=headers).json()\n",
+    "    return response\n",
+    "\n",
+    "result = places (\"Stadiums\", \"40.4010201\", \"-3.7067751\")\n",
+    "\n",
+    "json_file_path = r\"C:\\Users\\ateso\\Desktop\\Ironhack\\Project-3\\Data\\Stadiums.json\"\n",
+    "\n",
+    "with open(json_file_path, \"w\") as json_file:\n",
+    "    json.dump(result, json_file, indent=2)\n",
+    "\n",
+    "print(f\"Result has been saved to {json_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34368737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload Jsons to Mongo DB and Transform them using to_csv function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d009843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_csv(database_name, collection_name):\n",
+    "   \n",
+    "    client = MongoClient(\"localhost:27017\")\n",
+    "    db = client[database_name]\n",
+    "    c = db[collection_name]\n",
+    "\n",
+    "    filter_ = {\n",
+    "        \"results.name\": {\"$exists\": True},\n",
+    "        \"results.geocodes.main\": {\"$ne\": None}\n",
+    "    }\n",
+    "\n",
+    "    projection = {\n",
+    "        \"results.name\": 1,\n",
+    "        \"results.geocodes.main\": 1\n",
+    "    }\n",
+    "\n",
+    "    sorting = [(\"results.0.name\", 1)]\n",
+    "\n",
+    "    result_cursor = c.find(filter_, projection).sort(sorting)\n",
+    "    result_list = list(result_cursor)\n",
+    "\n",
+    "   \n",
+    "    names_and_coordinates = [\n",
+    "        (item['name'], item['geocodes']['main']['latitude'], item['geocodes']['main']['longitude'])\n",
+    "        for item in result_list[0]['results']\n",
+    "    ]\n",
+    "\n",
+    "  \n",
+    "    df = pd.DataFrame(names_and_coordinates, columns=['Name', 'Latitude', 'Longitude'])\n",
+    "\n",
+    "  \n",
+    "    df.to_csv(\"C:\\\\Users\\\\ateso\\\\Desktop\\\\Ironhack\\\\Project-3\\\\Data\\\\acsv\\\\new_csv.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b83bd57a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Used to find information from \"Companies\" data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2442f38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient(\"localhost:27017\")\n",
+    "db = client[database_name]\n",
+    "c = db[collection_name]"
+   ]
   },
   {
    "cell_type": "code",
