--- a/Visualizations/Maps_functions.ipynb
+++ b/Visualizations/Maps_functions.ipynb
@@ -1635,7 +1635,37 @@
    "id": "3958952c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_combined_map(df_all, df_off):\n",
+    "    map_center = [df_all['Latitude'].mean(), df_all['Longitude'].mean()]\n",
+    "    combined_map = folium.Map(location=map_center, zoom_start=13)\n",
+    "\n",
+    "    marker_group = folium.FeatureGroup(name='Company to purchase').add_to(combined_map)\n",
+    "\n",
+    "    for index, row in df_off.iterrows():\n",
+    "        folium.Marker(\n",
+    "            location=[row['Latitude'], row['Longitude']],\n",
+    "            popup=row['Name'],\n",
+    "            icon=folium.Icon(color='green', icon='dollar', prefix='fa')\n",
+    "        ).add_to(marker_group)\n",
+    "\n",
+    "    locations_all = df_all[['Latitude', 'Longitude']].values.tolist()\n",
+    "    HeatMap(locations_all, name=\"Area Density\").add_to(combined_map)\n",
+    "\n",
+    "    radius = 4000\n",
+    "    folium.Circle(\n",
+    "        location=map_center, \n",
+    "        radius=radius, \n",
+    "        color='blue', \n",
+    "        fill=True, \n",
+    "        fill_color='none', \n",
+    "        fill_opacity=0.3\n",
+    "    ).add_to(combined_map)\n",
+    "\n",
+    "    folium.LayerControl(name=\"Area Density\").add_to(combined_map)\n",
+    "\n",
+    "    return combined_map"
+   ]
   },
   {
    "cell_type": "code",
